# crud-AI

crudAI-backend/: .gitignore  agent.py  alembic.ini  data.py  database.py  main.py  pyproject.toml
crudAI-backend/migrations/: env.py
crudAI-backend/migrations/versions/: cb1f108ae856_add_token_columns_to_messages.py  ed0a0935280d_fresh_schema.py
crudAI-backend/models/: __init__.py  chat_threads.py  feedback.py  messages.py  products.py  users.py
crudAI-backend/multiAgents/: prompts.py  router.py  state.py
crudAI-backend/multiAgents/agents/: music_agent.py  sales_agent.py  supervisor.py
crudAI-backend/multiAgents/graph/: multi_agent_graph.py
crudAI-backend/multiAgents/tools/: chinook_db.py  chinook_tools.py
crudAI-backend/routes/: assistant.py  assistant_ws.py  editMessages.py  user.py
crudAI-frontend/: index.html  package-lock.json  package.json
crudAI-frontend/src/: App.jsx
crudAI-frontend/src/components/EditTextArea/: TextArea.css  TextArea.jsx
crudAI-frontend/src/components/Main/: Main.css  Main.jsx
crudAI-frontend/src/components/Navbar/: Navbar.css  Navbar.jsx
crudAI-frontend/src/components/Popup/: Dislike.css  Dislike.jsx
crudAI-frontend/src/components/Services/: ChatService.jsx  FeedbackService.jsx  useUserSetup.jsx  userChats.js
multiAgent-backend/: .env  abc.py  main.py  memory.py  new.txt  prompts.py  pyproject.toml  test_agent.py
multiAgent-backend/agents/: music_agent.py  sales_agent.py  supervisor.py
multiAgent-backend/graph/: multi_agent_graph.py
multiAgent-backend/tools/: chinook_db.py  chinook_tools.py
(+4 files in other folders)
